# stt-model-evals

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/: add-new-metric.md  add-new-model.md
.claude/skills/add-new-metric/: SKILL.md
.claude/skills/add-new-model/: SKILL.md
reports/report_20260108_005141/: summary.json
reports/report_20260108_005227/: summary.csv  summary.json
reports/test-fixed-labels/: summary.json
reports/test-rtf-labels/: summary.json
reports/test-updated-charts/: summary.csv  summary.json
reports/whisper-parakeet-50/: summary.csv
reports/whisper-vs-parakeet/: summary.json
scripts/: compute_metrics.py  generate_report.py  run_inference.py  serve_model.py
src/: __init__.py  data_loader.py  text_normalizer.py
src/metrics/: __init__.py  base.py  llm_judge.py  rtf.py  wer.py
src/models/: __init__.py  base.py  parakeet_model.py  qwen_omni_model.py  whisper_model.py
