[project]
name = "stt-model-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "jiwer>=4.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
